@@ -6020,10 +6020,12 @@ A:0/1:5/1:10/1
 
 N:809:Critical Hits
 G:=:d
-I:45:57:0
+I:45:58:0
 W:50:0:2:100000
 A:50/3
 F:CRIT
+# temporally.
+F:HIDE_TYPE
 
 # The Wand of Stone to Mud of Thrain
 #N:810:& Wand~ of Digging of Thrain
